<resources>
<<<<<<< HEAD
    <string name="app_name">Bango Tartan Hacks</string>
=======
    <string name="app_name">Bango</string>
<<<<<<< HEAD
    <string name="create_a_new_game_below">Create a New Game Below</string>
    <string name="name_of_board">Name of Board:</string>
    <string name="items">Items:</string>
    <string name="back">Back</string>
    <string name="make_game">MAKE GAME!</string>
    <string name="click_an_item_to_mark_in_the_game_when_someone_calls_bango_their_board_will_be_tested_against_this_master_list">Click an item to mark in the game. When someone calls Bango, their board will be tested against this master list</string>
    <string name="referee_controls">Referee Controls</string>
    <string name="Items">Items</string>
    <string name="input_at_least_25_bingo_items_seperated_by_commas_in_the_text_box_below">Input at least 25 bingo items seperated by commas in the text box below.</string>
    <string name="create">Create a New Game Below</string>
    <string name="Name">Name of Board</string>
    <string name="input_25_items_for_the_bango_board_separated_by_commas">Input 25 items for the bango board separated by commas</string>
    <string name="creategame">Create Game!</string>
    <string name="pick_one_of_your_games_below_to_play">Pick one of your games below to play!</string>
    <string name="click_the_button_below_to_generate_a_gameid">Click the button below to generate a GameID</string>
    <string name="start_game">Start Game!</string>
    <string name="buck">Back</string>
    <string name="connect_to_facebook">Connect to Facebook</string>
    <string name="join_game">Join Game</string>
    <string name="create_game">Create Game</string>
    <string name="start">Start Game</string>
    <string name="o">O</string>
=======
>>>>>>> refs/remotes/origin/master
>>>>>>> origin/master
</resources>
